--- a/src/Footer/Footer.scss
+++ b/src/Footer/Footer.scss
@@ -4,7 +4,7 @@
     width: 90vw;
     height: 4rem;
     margin-left: 2rem;
-    margin-top: 2rem;
+    
     padding: 2rem;
     align-self: flex-end;
 
